--- a/scheduled-zfs-sync.service
+++ b/scheduled-zfs-sync.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Scheduled ZFS Sync with RTC Wake and Tailscale Wait
+Requires=network-online.target tailscaled.service
 After=network-online.target tailscaled.service
-Wants=network-online.target
 
 [Service]
 Type=simple
 User=root
-ExecStartPre=/bin/bash -c 'until tailscale status --json | grep -q "\"Self\":.*\"Online\":true"; do sleep 5; done'
+ExecStartPre=/bin/bash -c 'until tailscale status --json | jq -e ".Self.Online == true" >/dev/null; do sleep 5; done'
 ExecStart=/usr/local/bin/scheduled-zfs-sync.sh
 StandardOutput=journal
 StandardError=journal
