add systemd timer as retry mechanism
rather than having the script itself wait for user sessions

--- a/scheduled-zfs-sync.service
+++ b/scheduled-zfs-sync.service
@@ -4,12 +4,8 @@ Requires=network-online.target tailscaled.service
 After=network-online.target tailscaled.service
 
 [Service]
-Type=simple
+Type=oneshot
 User=root
 ExecStartPre=/bin/bash -c 'until tailscale status --json | jq -e ".Self.Online == true" >/dev/null; do sleep 5; done'
 ExecStart=/usr/local/bin/scheduled-zfs-sync.sh
 TimeoutStartSec=300
-Restart=on-failure
-
-[Install]
-WantedBy=multi-user.target
